--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <body>
 
   <ul>
-  <li>Sandwiches
+  <li></li>
+  <li>2 slices of bread
     <ul>
       <li>Ham and Cheese</li>
       <li>Grilled Cheese</li>
@@ -15,7 +16,7 @@
   <li>Snacks
     <li>Nacho Cheese French Fries</li>
     <li>Cheese and crackers</li>
-  </li>
+  
   <li>Soups
     <ul>
       <li>Cheese soup</li>
