--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 <body>
 
   <ul>
-  <li></li>
-  <li>2 slices of bread
+  <li>Sandwiches
     <ul>
       <li>Ham and Cheese</li>
       <li>Grilled Cheese</li>
@@ -16,7 +15,7 @@
   <li>Snacks
     <li>Nacho Cheese French Fries</li>
     <li>Cheese and crackers</li>
-  
+  </li>
   <li>Soups
     <ul>
       <li>Cheese soup</li>
