--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
 <body>
 
   <ul>
-  <li>Sandwiches
+  <li>2 slices of bread
     <ul>
       <li>Ham and Cheese</li>
       <li>Grilled Cheese</li>
     </ul>
   </li>
-  <li>Snacks
+  <li>4 slices of cheese 
     <li>Nacho Cheese French Fries</li>
     <li>Cheese and crackers</li>
   </li>
-  <li>Soups
+  <li>1 tbsp of butter
     <ul>
       <li>Cheese soup</li>
     </ul>
