--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <li>Nacho Cheese French Fries</li>
     <li>Cheese and crackers</li>
   </li>
-  <li>Nacho Cheese French Fries
+  <li>1 tbsp of butter
     <ul>
       <li>Cheese soup</li>
     </ul>
