Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </ul>
   </li>
   <li>4 slices of cheese 
-    <li>Nacho Cheese French Fries</li>
+    <li>1 tbsp of butter</li>
     <li>Cheese and crackers</li>
   </li>
   <li>1 tbsp of butter
