--- a/index.html
+++ b/index.html
@@ -29,5 +29,12 @@
   </li>
 </ul>
 
+<ol>
+  <li>Grilled Cheese</li>
+  <li>Sushi</li>
+  <li>Cheese and crackers</li>
+  <li>Cheese soup</li>
+  <li>Nacho Cheese French Fries</li>
+</ol>
 </body>
 </html>
